--- a/en/index.html
+++ b/en/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
     <head>
-        <title>Dog Of War | Equipe de Muay Thai</title>
+        <title>Dog Of War | Muay Thai Team</title>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -10,7 +10,7 @@
         <meta name="author" content="@dudulira"/>
         <link rel="shortcut icon" href="../favicon.ico"> 
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons|Open+Sans+Condensed|Oswald" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="../assets/css/main.css">
 
 
   <!--[if IE]>
@@ -19,7 +19,7 @@
     </head>
     <body>
   <div class="preloader">
-  <div class="status center"><img data-src="assets/img/dow2.png" class="responsive-img circle wow flip" data-wow-iteration="10" data-wow-duration="2s" ><h6>BEM VINDO</h6></div>
+  <div class="status center"><img data-src="../assets/img/dow2.png" class="responsive-img circle wow flip" data-wow-iteration="10" data-wow-duration="2s" ><h6>welcome</h6></div>
 </div>
 
     <header><nav class="transparent z-depth-0">
@@ -79,10 +79,10 @@
 
 <ul class="slides">
       <li>
-<img class="responsive-img" data-src="assets/img/lira.jpg" alt="">
+<img class="responsive-img" data-src="../assets/img/lira.jpg" alt="">
       </li>
       <li>
-<img data-src="assets/img/mt.jpg" alt="">
+<img data-src="../assets/img/mt.jpg" alt="">
       </li>
     </ul>
 </section>
@@ -94,15 +94,15 @@
       <i class="grey-text large material-icons" >free_breakfast</i>
     </a>
     <ul>
-      <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/grupocamim/"> <img class="responsive-img tooltipped" data-src="assets/img/camim-logo.png" data-position="left" data-delay="50" data-tooltip="CAMIM Saúde"></a></li>
+      <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/grupocamim/"> <img class="responsive-img tooltipped" data-src="../assets/img/camim-logo.png" data-position="left" data-delay="50" data-tooltip="CAMIM Saúde"></a></li>
 
-      <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/personalizacaobl/"><img class="responsive-img tooltipped" data-src="assets/img/bl.jpg" data-position="left" data-delay="50" data-tooltip="BL Personalização"></a></li>
+      <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/personalizacaobl/"><img class="responsive-img tooltipped" data-src="../assets/img/bl.jpg" data-position="left" data-delay="50" data-tooltip="BL Personalização"></a></li>
 
-      <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/AcademiaR2fit/"><img class="responsive-img tooltipped" data-position="left" data-delay="50" data-tooltip="R2 Academia" data-src="assets/img/r2.jpg">
+      <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/AcademiaR2fit/"><img class="responsive-img tooltipped" data-position="left" data-delay="50" data-tooltip="R2 Academia" data-src="../assets/img/r2.jpg">
 </a></li>
-      <li><a class="btn-floating white " target="_blank" href="https://www.facebook.com/Jofaflex-Coberturas-e-Serralheria-em-geral-1663615473965837/">  <img class="responsive-img tooltipped" data-position="left" data-delay="50" data-tooltip="JOFAFLEX Coberturas e Serralheria" data-src="assets/img/jfx.jpg">
+      <li><a class="btn-floating white " target="_blank" href="https://www.facebook.com/Jofaflex-Coberturas-e-Serralheria-em-geral-1663615473965837/">  <img class="responsive-img tooltipped" data-position="left" data-delay="50" data-tooltip="JOFAFLEX Coberturas e Serralheria" data-src="../assets/img/jfx.jpg">
 </a></li>
-<li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/LETAL-RJ-768552356597618/">  <img class="responsive-img tooltipped"  data-position="left" data-delay="50" data-tooltip="Letal RJ" data-src="assets/img/letalrj.png">
+<li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/LETAL-RJ-768552356597618/">  <img class="responsive-img tooltipped"  data-position="left" data-delay="50" data-tooltip="Letal RJ" data-src="../assets/img/letalrj.png">
 </a></li>
 
 
@@ -135,7 +135,7 @@
             <h6>Perfil</h6>
             <div class="card red darken-1">
               <div class="card-content white-text">
-                <img src="assets/img/dow2.png" width="64" height="64">
+                <img src="../assets/img/dow2.png" width="64" height="64">
                 <p>Em breve</p>
               </div>
               <div class="card-action">
@@ -170,7 +170,7 @@
       </div>
     </div>
     </body>
-<script type="text/javascript" src="assets/js/main.js"></script>
+<script type="text/javascript" src="../assets/js/main.js"></script>
 <script type="text/javascript">
 new WOW().init();</script>
 </html>
