--- a/en/index.html
+++ b/en/index.html
@@ -5,11 +5,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="Dog Of War é uma equipe de Muay Thai da zona oeste do Rio de janeiro" />
-        <meta name="keywords" content="Equipe, Muay Thai, projeto, letalrj, arte livre, Thai Boxing, Arte Marcial" />
+        <meta name="description" content="Dog Of War is a Muay Thai team from the west side of Rio de Janeiro-BR" />
+        <meta name="keywords" content="Figthing Team, Muay Thai, project, letalrj, Free art, Thai Boxing, Martial arts" />
         <meta name="author" content="@dudulira"/>
         <link rel="shortcut icon" href="../favicon.ico"> 
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons|Open+Sans+Condensed|Oswald" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/main.css">
 
 
@@ -62,7 +61,7 @@
             <div class="popup-text">
                         <a class="link link--takiri container wow fadeInDown" data-wow-delay="3s" href="#dow">
           <h1><b>DOG OF WAR</b></h1> 
-<span class="wow pulse amber-text transparent" data-wow-iteration="infinite" data-wow-duration="1500ms">Equipe de Muay Thai</span>
+<span class="wow pulse amber-text transparent" data-wow-iteration="infinite" data-wow-duration="1500ms">Muay Thai Team</span>
 <div class="t1">
         <div class="in"></div>
       </div>
@@ -111,7 +110,7 @@
   </div>
         
 
-<div class="down grey center hide-on-med-and-down"><p>"Tudo posso naquele me fortalece" - Filipenses 4:13</p></div>
+<div class="down grey center hide-on-med-and-down"><p>"I can do all things through Christ who strengthens me" - Philippians 4:13</p></div>
 </main>
   
   <!-- Modal Structure -->
@@ -120,7 +119,7 @@
     <a href="#!" class="right modal-action modal-close waves-effect waves-red btn-flat"><i class="white-text large material-icons">clear</i></a>
     <div class="container">
       <div class="section center">
-          <h4 class="row center">Dog of War | Equipe de Muay Thai</h5>
+          <h4 class="row center">Dog of War | Muay Thai Team</h5>
 
       <h5>sobre</h5>
         <h6>Uma introdução sobre nosso trabalho</h6>
