--- a/index.html
+++ b/index.html
@@ -27,26 +27,27 @@
 <div class="nav-wrapper">
   <div class="topoSocial fixed-action-btn toolbar wow fadeInRight"  data-wow-delay="5s">
     <a class="btn-floating btn-large transparent z-depth-5 pulse waves-effect waves-light">
-      <i class="large material-icons grey-text">share</i>
+      <i class="large material-icons"><svg class="icones">
+              <use xlink:href="assets/icons/sprite.svg#Partilhar"></use>
+            </svg></i>
     </a>
     <ul>
-      <li class="waves-effect waves-red tooltipped"  data-position="bottom" data-delay="50" data-tooltip="Google Plus"><a href="#!"><i class="large material-icons red-text">
-
-      <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-    <path fill="#d34836" d="M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M19.5,12H18V10.5H17V12H15.5V13H17V14.5H18V13H19.5V12M9.65,11.36V12.9H12.22C12.09,13.54 11.45,14.83 9.65,14.83C8.11,14.83 6.89,13.54 6.89,12C6.89,10.46 8.11,9.17 9.65,9.17C10.55,9.17 11.13,9.56 11.45,9.88L12.67,8.72C11.9,7.95 10.87,7.5 9.65,7.5C7.14,7.5 5.15,9.5 5.15,12C5.15,14.5 7.14,16.5 9.65,16.5C12.22,16.5 13.96,14.7 13.96,12.13C13.96,11.81 13.96,11.61 13.89,11.36H9.65Z" />
-</svg>
+      <li class="waves-effect waves-red tooltipped"  data-position="bottom" data-delay="50" data-tooltip="Google Plus"><a href="#!"><i class="large material-icons">
+<svg class="icones">
+              <use xlink:href="assets/icons/sprite.svg#Google_Plus"></use>
+            </svg>
 
 </i></a></li>
-      <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="facebook"><a target="_blank" href="https://www.facebook.com/equipe.dog.of.war/"><i class="large material-icons grey-text">
-<svg style="width:24px;height:24px" viewBox="0 0 24 24">
-    <path fill="#3b5998" d="M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M18,5H15.5A3.5,3.5 0 0,0 12,8.5V11H10V14H12V21H15V14H18V11H15V9A1,1 0 0,1 16,8H18V5Z" />
-</svg></i></a></li>
+      <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="facebook"><a target="_blank" href="https://www.facebook.com/equipe.dog.of.war/"><i class="large material-icons">
+<svg class="icones">
+              <use xlink:href="assets/icons/sprite.svg#Facebook"></use>
+            </svg></i></a></li>
       <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Twitter"><a href="#!"><i class="large material-icons grey-text"><svg style="width:24px;height:24px" viewBox="0 0 24 24">
     <path fill="#00aced" d="M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39 4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z" />
 </svg></i></a></li>
-      <li class="waves-effect waves-red tooltipped" data-position="bottom" data-delay="50" data-tooltip="YouTube"><a href="#!"><i class="large material-icons red-text"><svg style="width:24px;height:24px" viewBox="0 0 24 24">
-    <path fill="#cc181e" d="M10,16.5V7.5L16,12M20,4.4C19.4,4.2 15.7,4 12,4C8.3,4 4.6,4.19 4,4.38C2.44,4.9 2,8.4 2,12C2,15.59 2.44,19.1 4,19.61C4.6,19.81 8.3,20 12,20C15.7,20 19.4,19.81 20,19.61C21.56,19.1 22,15.59 22,12C22,8.4 21.56,4.91 20,4.4Z" />
-</svg></i></a></li>
+      <li class="waves-effect waves-red tooltipped" data-position="bottom" data-delay="50" data-tooltip="YouTube"><a href="#!"><i class="large material-icons red-text"><svg class="icones">
+              <use xlink:href="assets/icons/sprite.svg#YouTube"></use>
+            </svg></i></a></li>
     </ul>
   </div>
     </div>
@@ -91,7 +92,9 @@
 
   <div id="parceiros" class="fixed-action-btn vertical wow fadeInRight"  data-wow-delay="5s">
     <a class="btn-floating btn-large transparent z-depth-5 waves-effect waves-light tooltipped" data-tooltip="Parceiros" data-position="left" data-delay="50">
-      <i class="grey-text large material-icons" >free_breakfast</i>
+      <svg class="icones">
+              <use xlink:href="assets/icons/sprite.svg#marketing"></use>
+            </svg>
     </a>
     <ul>
       <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/grupocamim/"> <img class="responsive-img tooltipped" data-src="assets/img/camim-logo.png" data-position="left" data-delay="50" data-tooltip="CAMIM Saúde"></a></li>
@@ -117,7 +120,9 @@
   <!-- Modal Structure -->
   <div id="dow" class="modal black white-text">
     <div class="modal-content">
-    <a href="#!" class="right modal-action modal-close waves-effect waves-red btn-flat"><i class="white-text large material-icons">clear</i></a>
+    <a href="#!" class="right modal-action modal-close waves-effect waves-red btn-flat"><i class="large">  <svg class="iconesx">
+              <use xlink:href="assets/icons/sprite.svg#clear-button"></use>
+            </svg></i></a>
     <div class="container">
       <div class="section center">
           <h4 class="row center">Dog of War | Equipe de Muay Thai</h5>
