--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
         <meta name="description" content="Dog Of War é uma equipe de Muay Thai da zona oeste do Rio de janeiro" />
         <meta name="keywords" content="Equipe, Muay Thai, projeto, letalrj, arte livre, Thai Boxing, Arte Marcial" />
         <meta name="author" content="@dudulira"/>
-        <link rel="shortcut icon" href="../favicon.ico"> 
+        <link rel="apple-touch-icon" sizes="57x57" href="assets/img/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="assets/img/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="assets/img/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="assets/img/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="assets/img/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="assets/img/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="assets/img/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="assets/img/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+        <link rel="manifest" href="/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="assets/img/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff"> 
 
   <link rel="stylesheet" href="assets/css/main.css">
 
@@ -19,33 +35,33 @@
     </head>
     <body>
   <div class="preloader">
-  <div class="status center"><img data-src="assets/img/dow2.png" class="responsive-img circle wow flip" data-wow-iteration="10" data-wow-duration="2s" ><h6>BEM VINDO</h6></div>
+  <div class="status center"><img data-src="assets/img/dow2.png" class="responsive-img circle animated infinite flip" alt="dogofwar-logo"><h6>BEM VINDO</h6></div>
 </div>
 
     <header><nav class="transparent z-depth-0">
 
 <div class="nav-wrapper">
-  <div class="topoSocial fixed-action-btn toolbar wow fadeInRight"  data-wow-delay="5s">
-    <a class="btn-floating btn-large transparent z-depth-5 pulse waves-effect waves-light">
+  <div class="topoSocial fixed-action-btn toolbar animated fadeInRight">
+    <a class="btn-floating white z-depth-5 pulse waves-effect waves-light">
       <i class="large material-icons"><svg class="icones">
-              <use xlink:href="assets/icons/sprite.svg#Partilhar"></use>
+              <use xlink:href="assets/icons/sprite.svg#Arrow"></use>
             </svg></i>
     </a>
     <ul>
       <li class="waves-effect waves-red tooltipped"  data-position="bottom" data-delay="50" data-tooltip="Google Plus"><a href="#!"><i class="large material-icons">
-<svg class="icones">
+<svg class="iconesx">
               <use xlink:href="assets/icons/sprite.svg#Google_Plus"></use>
             </svg>
 
 </i></a></li>
       <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="facebook"><a target="_blank" href="https://www.facebook.com/equipe.dog.of.war/"><i class="large material-icons">
-<svg class="icones">
+<svg class="iconesx">
               <use xlink:href="assets/icons/sprite.svg#Facebook"></use>
             </svg></i></a></li>
-      <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Twitter"><a href="#!"><i class="large material-icons grey-text"><svg style="width:24px;height:24px" viewBox="0 0 24 24">
-    <path fill="#00aced" d="M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39 4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z" />
-</svg></i></a></li>
-      <li class="waves-effect waves-red tooltipped" data-position="bottom" data-delay="50" data-tooltip="YouTube"><a href="#!"><i class="large material-icons red-text"><svg class="icones">
+      <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Instagram"><a href="#!"><i class="large material-icons"><svg class="iconesx">
+              <use xlink:href="assets/icons/sprite.svg#Instagram"></use>
+            </svg></i></a></li>
+      <li class="waves-effect waves-red tooltipped" data-position="bottom" data-delay="50" data-tooltip="YouTube"><a href="#!"><i class="large material-icons red-text"><svg class="iconesx">
               <use xlink:href="assets/icons/sprite.svg#YouTube"></use>
             </svg></i></a></li>
     </ul>
@@ -61,9 +77,9 @@
     <div class="popup">
         <div class="popup-content">
             <div class="popup-text">
-                        <a class="link link--takiri container wow fadeInDown" data-wow-delay="3s" href="#dow">
+                        <a class="link link--takiri container animated fadeInDown" href="#dow">
           <h1><b>DOG OF WAR</b></h1> 
-<span class="wow pulse amber-text transparent" data-wow-iteration="infinite" data-wow-duration="1500ms">Equipe de Muay Thai</span>
+<h2 class="animated infinite pulse amber-text transparent">Equipe de Muay Thai</h2>
 <div class="t1">
         <div class="in"></div>
       </div>
@@ -80,32 +96,32 @@
 
 <ul class="slides">
       <li>
-<img class="responsive-img" data-src="assets/img/lira.jpg" alt="">
+<img class="responsive-img" data-src="assets/img/lira.jpg" alt="bakcground1">
       </li>
       <li>
-<img data-src="assets/img/mt.jpg" alt="">
+<img class="responsive-img" data-src="assets/img/mt.jpg" alt="bakcground2">
       </li>
     </ul>
 </section>
 <br/><br/>
 
 
-  <div id="parceiros" class="fixed-action-btn vertical wow fadeInRight"  data-wow-delay="5s">
-    <a class="btn-floating btn-large transparent z-depth-5 waves-effect waves-light tooltipped" data-tooltip="Parceiros" data-position="left" data-delay="50">
+  <div id="parceiros" class="fixed-action-btn vertical animated fadeInRight">
+    <a class="btn-floating transparent z-depth-0 waves-effect waves-light tooltipped" data-tooltip="Parceiros" data-position="left" data-delay="50">
       <svg class="icones">
-              <use xlink:href="assets/icons/sprite.svg#marketing"></use>
+              <use xlink:href="assets/icons/sprite.svg#Trofeu"></use>
             </svg>
     </a>
     <ul>
-      <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/grupocamim/"> <img class="responsive-img tooltipped" data-src="assets/img/camim-logo.png" data-position="left" data-delay="50" data-tooltip="CAMIM Saúde"></a></li>
+      <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/grupocamim/"> <img class="responsive-img tooltipped" data-src="assets/img/camim-logo.png" data-position="left" data-delay="50" data-tooltip="CAMIM Saúde" alt="camim-logo"></a></li>
 
-      <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/personalizacaobl/"><img class="responsive-img tooltipped" data-src="assets/img/bl.jpg" data-position="left" data-delay="50" data-tooltip="BL Personalização"></a></li>
+      <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/personalizacaobl/"><img class="responsive-img tooltipped" data-src="assets/img/bl.jpg" data-position="left" data-delay="50" data-tooltip="BL Personalização" alt="bl-logo"></a></li>
 
-      <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/AcademiaR2fit/"><img class="responsive-img tooltipped" data-position="left" data-delay="50" data-tooltip="R2 Academia" data-src="assets/img/r2.jpg">
+      <li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/AcademiaR2fit/"><img class="responsive-img tooltipped" data-position="left" data-delay="50" data-tooltip="R2 Academia" data-src="assets/img/r2.jpg" alt="r2-logo">
 </a></li>
-      <li><a class="btn-floating white " target="_blank" href="https://www.facebook.com/Jofaflex-Coberturas-e-Serralheria-em-geral-1663615473965837/">  <img class="responsive-img tooltipped" data-position="left" data-delay="50" data-tooltip="JOFAFLEX Coberturas e Serralheria" data-src="assets/img/jfx.jpg">
+      <li><a class="btn-floating white " target="_blank" href="https://www.facebook.com/Jofaflex-Coberturas-e-Serralheria-em-geral-1663615473965837/">  <img class="responsive-img tooltipped" data-position="left" data-delay="50" data-tooltip="JOFAFLEX Coberturas e Serralheria" data-src="assets/img/jfx.jpg" alt="jfx-logo">
 </a></li>
-<li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/LETAL-RJ-768552356597618/">  <img class="responsive-img tooltipped"  data-position="left" data-delay="50" data-tooltip="Letal RJ" data-src="assets/img/letalrj.png">
+<li><a class="btn-floating white" target="_blank" href="https://www.facebook.com/LETAL-RJ-768552356597618/">  <img class="responsive-img tooltipped"  data-position="left" data-delay="50" data-tooltip="Letal RJ" data-src="assets/img/letalrj.png" alt="letalrj-logo">
 </a></li>
 
 
@@ -120,54 +136,36 @@
   <!-- Modal Structure -->
   <div id="dow" class="modal black white-text">
     <div class="modal-content">
-    <a href="#!" class="right modal-action modal-close waves-effect waves-red btn-flat"><i class="large">  <svg class="iconesx">
+    <a href="#!" class="right modal-action modal-close waves-effect waves-red btn-flat"><i class="large">  <svg class="icones">
               <use xlink:href="assets/icons/sprite.svg#clear-button"></use>
             </svg></i></a>
     <div class="container">
       <div class="section center">
           <h4 class="row center">Dog of War | Equipe de Muay Thai</h5>
 
-      <h5>sobre</h5>
-        <h6>Uma introdução sobre nosso trabalho</h6>
         <hr>
      
          <div class="row">
-          <div class="col s12 m4 l4">
-            <h6>História</h6>
-            <p>Em breve um pouco da nossa história</p>
+          <div class="col s12 m6 l6">
+            <h6>A história</h6>
+            <p class="flow-text"><b>MUAY THAI</b>: Arte livre <br>O Muay Thai, o qual também é conhecido como Thai Boxing em alguns países como Estados Unidos e Inglaterra, é muito conhecido no Brasil como Boxe Tailandês e é uma Arte Marcial Tailandêsa com mais de 2.000 anos de idade. 
+            A origem do Muay Thai confunde-se com a origem do povo Tailandês. Existem várias versões sobre a origem do Muay Thai. A mais aceita pela maioria dos Mestres de Muay Thai e também por vários historiadores Tailandeses é a seguinte: </p>
+<p class="flow-text">
+            Segundo os Tailandeses, a origem de seu povo é a província de Yunnam, nas margens do rio Yang Tsé na China Central. Muitas gerações atrás eles migraram da China para o local onde atualmente é à Tailândia em busca de liberdade e de terras férteis para agricultura. Do seu local de origem, a China, até o seu destino, os Tailandeses foram constantemente hostilizados e sofreram muitos ataques de bandidos, de Senhores da Guerra, de animais, e também foram acometidos de muitas doenças. Para protegerem-se e manterem à saúde, eles criaram um método de luta chamado "Chupasart". Este método de luta e auto-defesa fazia uso de diversas armas como por exemplo: espadas, facas, lanças, bastões, escudos, machados, arco e flecha, etc. No treinamento do "Chupasart", freqüentemente ocorriam acidentes que causavam algumas vezes graves ferimentos aos praticantes. Para que eles pudessem treinar sem ferir-se, os tailandeses criaram um método de luta sem armas, o percursor do atual Muay Thai. Assim eles podiam exercitar-se e treinar mesmo em tempos de paz e sem o risco de ferir-se. </p>
+<p class="flow-text">
+            No início, o Muay Thai era muito parecido com o Kung Fu Chinês. Um fato normal levando-se em conta à origem do povo Tailandês. O antigo Muay Thai utilizava-se de golpes com as palmas das mãos, ataques com as pontas dos dedos, imobilizações e mãos em garras para segurar o oponente. Com o tempo, ele foi modificando-se e transformou-se no estilo de luta que é hoje.  </br> </p><i>veja mais aqui: http://www.cbmuaythai.com.br/cf/extra.asp?id=1#.WWjGZCeQwsp</i>
           </div>
-          <div class="col s12 m4 l4">
-            <h6>Perfil</h6>
+          <div class="col s12 m6 l6">
+            <h6>Perfil Dog Of War</h6>
             <div class="card red darken-1">
               <div class="card-content white-text">
-                <img src="assets/img/dow2.png" width="64" height="64">
+                <img src="assets/img/dow2.png" width="64" height="64" alt="dogofwar-logo">
                 <p>Em breve</p>
               </div>
               <div class="card-action">
               
               </div>
             </div>
-          </div>
-          <div class="col s12 m4 l4">
-            <h6>Projetos</h6>
-            <ul class="collapsible grey-text">
-              <li class="">
-                <div class="collapsible-header"><i class="mdi-av-web"></i>Em breve</div>
-                <div class="collapsible-body"><p>Em breve</p></div>
-              </li>
-              <li>
-                <div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>Em breve</div>
-                <div class="collapsible-body"><p>Em breve</p></div>
-              </li>
-              <li>
-                <div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>Em breve</div>
-                <div class="collapsible-body"><p>Em breve</p></div>
-              </li>
-              <li>
-                <div class="collapsible-header"><i class="mdi-editor-insert-comment"></i>Em breve</div>
-                <div class="collapsible-body"><p>Em breve</p></div>
-              </li>
-            </ul>
           </div>
         </div>
       </div>
@@ -176,6 +174,4 @@
     </div>
     </body>
 <script type="text/javascript" src="assets/js/main.js"></script>
-<script type="text/javascript">
-new WOW().init();</script>
 </html>
